2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added known floppies and magneto-opticals.

2015-12-13  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Corrected miswriting of CDXA, CDRW and CDROM.

2015-12-06  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	* DiscImageChef.Metadata.csproj:
	  Added method to convert DiskType to disk type and subtype
	  strings.

2015-12-05  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Metadata.csproj:
	  Added generating XML metadata for file systems.
