@@ -1,3 +1,10 @@
+2016-01-16  Natalia Portillo  <claunia@claunia.com>
+
+	* Dimensions.cs:
+	* DiscImageChef.Metadata.csproj:
+	  Added static method to get standard dimensions from disk
+	  types.
+
 2015-12-31  Natalia Portillo  <claunia@claunia.com>
 
 	* DiskType.cs:
